  * adding tail log view + order by DATE last files in logs
  * fix ;;; END ALTERNC zones bug
  * proposal (not enabled by default) of error.log per vhost
  * default message size limit to 100M, no mailbox size limit in postfix
  * fix removal of awstats-package crontab in favor of AlternC's one
  * fix unzip/untar/ungzip of files from the browser (double escapeshellarg)

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Mon, 20 Apr 2015 18:00:12 +0200

alternc (3.1.3) oldstable; urgency=low

  * fix opendkim listening on *
  * fix a probable privilege escalation in cron management
  * fix a random number generation issue in PHP (rand automatically initialized by time(), not better!)
  * fix some shell_exec() or exec() not using escapeshellarg in PHP.
  * fix set a proper SSLCipherSuite, removes SSLv3 (poodle protection)
  * fix touching opendkim files in alternc.instal to prevent failure at install time

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Mon, 27 Nov 2014 11:17:12 +0100

alternc (3.1.2) oldstable; urgency=low

  * fix a bug when installing (doing patches from 3.1~rc)
  * #1622 fix a bug in debian/alternc.config : overwrote mysql sysusr password all the time
  * fix some (5) bugs in the file manager: permission, editor, file deletion... (commit c96f928 81aae4c beebd51)
  * #1573 fix dependencies on dovecot-managesieved
  * fix LASTLOGIN not working on Wheezy for Dovecot (commit d4d746b)
  * fix NOT migrating automatically from /var/alternc/* to /var/(www|mail)/* (commit 4749974)
  * fix quota issues migrating from courier to dovecot: quota was NULL, used was negative (commit 3487a95)
  * fix variable table structure change not needed for 3.1/3.2 + %%FQDN%% found in this table (commit dc367d6)
  * fix a bug when upgrading: mailname_bounce not defined early enough in variable table (commit 6043b37)
  * fix a roundcube bug at install time: not migrating "webmail" type properly (commit cf37cd3)
  * fix a bug in rebuild_all_conf doing nothing (commit 919d68e)
